--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>Tile.qml</file>
         <file>GameBoard.qml</file>
+        <file>TimerLabel.qml</file>
     </qresource>
 </RCC>
